# saana

./: .gitignore  __init__.py  cli.py  config.ini  intents.yaml  main.py  pyproject.toml  server.py  setup.py
modes/: __init__.py
modes/applications/: config.ini  intents.yaml  main.py
modes/bookmarks/: config.ini  main.py
modes/change_mode/: config.ini  intents.yaml  main.py
modes/checker_mode/: __init__.py  intents.yaml  main.py
modes/clipboard_mode/: intents.yaml
modes/command_mode/: __init__.py  intents.yaml  main.py
modes/generator/: main.py
modes/generic_mode/: __init__.py  config.ini  intents.yaml  main.py
modes/input/: intents.yaml  main.py
modes/input_mode/: intents.yaml  main.py  qbase.py
modes/keyboard/: intents.yaml  main.py
modes/keyboard_/: main.py
modes/lookup/: anki_notes.py  intents.yaml  main.py  utils.py
modes/notify/: main.py  test.py
modes/open_ai/: config.ini  intents.yaml  main.py
modes/qutebrowser/: config.ini  intents.yaml  main.py
modes/sioyek/: main.py
modes/tasks/: config.ini  database.py  intents.yaml  main.py  server.py
modes/translator/: config.ini  intents.yaml  main.py
modes/wiki/: config.ini  intents.yaml
modes/windows_manager/: intents.yaml  main.py
speechToCommand/: __init__.py  cli.py  config.ini  intents.yaml  main.py
speechToCommand/modes/: __init__.py
speechToCommand/utils/: __init__.py  handler.py  intender.py  loader.py
src/saana/: config.toml  main.py  main.py_
utils/: handler.py  helpers.py  intender.py  loader.py  porter.py  reporter.py
utils/helper/: helper.py
(+153 files in other folders)
