[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "speechToCommand"
version = "1.0.0"
authors = [
  { name="AO", email="adhambek.otabekov.post@gmail.com" },
]
description = "Speech to Command "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
