[tool.poetry]
name = "Saana"
version = "0.0.1"
description = "A controller"
authors = ["A O <adhambek.otabekov.post@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
# plug = {path = "/home/adam/code/plug", develop = true}
plug = {git = "https://github.com/aotabekov91/plug", branch='main'}

[tool.poetry.scripts]
saana = "saana.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
